# ReplicaT4

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.json.example  mise.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: pyproject.toml  zensical.toml
docs/docs/: configuration.md  getting-started.md  index.md  motivation.md  read-write-modes.md  usage-examples.md
examples/simple-single-destination/: README.md  config.json  config.yaml  docker-compose.yml
src/: app_state.rs  config.rs  lib.rs  main.rs  server.rs
src/auth/: credentials.rs  middleware.rs  mod.rs  signature.rs
src/handlers/: delete_object.rs  get_object.rs  head_bucket.rs  head_object.rs  list_objects.rs  mod.rs  not_found.rs  put_object.rs
src/storage/: backend.rs  in_memory.rs  mod.rs  multi_backend.rs  s3.rs
src/storage/multi_backend/: delete_object.rs  get_object.rs  head_bucket.rs  head_object.rs  list_objects.rs  mod.rs  put_object.rs  utils.rs
src/types/: error.rs  mod.rs  models.rs
tests/: test_delete_object.rs  test_get_object.rs  test_head_bucket.rs  test_head_object.rs  test_large_object.rs  test_list_objects.rs  test_put_object.rs
tests/helpers/: mod.rs  test_server.rs
